# opendic-benchmark

./: .gitignore  README.md  experiment_logs.db  pyproject.toml  taskfile.yml
results/opendic/: opendic_cloud_azure_cached_batch.parquet  opendic_file_batch.parquet  opendic_file_batch_cache.parquet  opendic_file_cached_incomplete.parquet  opendic_file_incomplete.parquet
results/standard/: snowflake.parquet  sqlite.parquet
src/opendic_benchmark/: __init__.py  consts.py  exp_function.py  exp_table.py  main.py  runner.py
src/opendic_benchmark/experiment_logger/: data_recorder.py
utils/: convert_benchmark_csv.sql  export_parquet.py  remove_old_results.sql  snowflake_latency_test.py
visualization/dashboards/: snowflake.sql
